monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 31024
  selector:
    app.kubernetes.io/name: prometheus
